# CW_3_Skypro_vakhrinS

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/: category.py  product.py  utils.py
src/data/: data.json
tests/: conftest.py  test_category.py  test_product.py  test_utils.py
