[tool.poetry]
name = "dz-13-1-16-2-oop"
version = "0.1.0"
description = ""
authors = ["sergeyvakhrin <parlamentsv@mail.ru>"]
readme = "README.md"
packages = [{include = "dz_13"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
